@@ -79,7 +79,8 @@ Enable installation of packages from MELPA by adding an entry to package-archive
     ;; (setq aider-args `("--config" ,(expand-file-name "~/.aider.conf.yml")))
     ;; ;;
     ;; Optional: Set a key binding for the transient menu
-    (global-set-key (kbd "C-c a") 'aider-transient-menu))
+    (global-set-key (kbd "C-c a") 'aider-transient-menu)) ;; for wider screen
+    ;; or use aider-transient-menu-2cols / aider-transient-menu-1col, for narrow screen
 #+END_SRC
 
 - *aider-args just passed directly to aider CLI*, [[https://aider.chat/docs/config/options.html][aider options reference]]
@@ -353,7 +354,7 @@ If you used installed aider.el through melpa and package-install, just need to ~
 - [ ] Import useful MCP feature to aider
 - [ ] Learn and migrate useful feature from popular AI coding tool
 - [ ] Better way to batch add relevant files from repo to aider session
-- More thinking on how to simplify the menu / commands
+- [ ] Thinking on how to simplify the menu / commands
 
 ** Code quality
  
